# gs11n

./: .gitignore  Cargo.toml  README.md
gs11n/: Cargo.toml  LICENSE  README.md
gs11n/src/serialization/: decoder.rs  encoder.rs  wire_type.rs
gs11n/src/types/: char.rs  floating.rs  map.rs  option.rs  signed.rs  slice.rs  string.rs  unsigned.rs
gs11n/tests/: dynamic_test.rs  generic_test.rs  map_test.rs  plugin_test.rs  prefab_test.rs  serialization.rs  struct_test.rs  vector_test.rs
gs11n_derive/: Cargo.toml  LICENSE-MIT
gs11n_derive/src/: lib.rs
gs11n_derive/src/macros/: dynamic.rs  mod.rs  serialization.rs
gs11n_derive/tests/: dynamic_lib.rs  dynamic_test.rs  macro_test.rs  plugin_test.rs
gs11n_derive_internals/: Cargo.toml
gs11n_derive_internals/src/: lib.rs
gs11n_derive_internals/tests/: proc_macro_test.rs
