[package]
name = "gs11n_derive"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psionic12/gs11n"

[lib]
proc-macro = true

[dependencies]
gs11n_derive_internals = { path = "../gs11n_derive_internals" }
syn = "1.0.74"
quote = "1.0.9"
lazy_static = "1.4.0"
ctor = "0.1.3"
rustc-hash = "1.1.0"
proc-macro2 = "1.0.27"
convert_case = "0.4.0"

[dev-dependencies]
test-cdylib = "1.1.0"
libloading = "0.7.2"
gs11n = { path = "../gs11n" }